--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,7 +39,11 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  disabled:   #C0C0C0
+  disabled:   #C0C0C0,
+  royal:      #8A2BE2,
+  ghostwhite: ghostwhite,
+  orange:     #ff6a00,
+  steel: rgba(163, 161, 161, 0.80)
 );
 
 
