stable build, polished ui

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,11 +20,9 @@
   text-align:center;
 }
 
-.item-divider {
-  background-color: lightslategrey;
-  color: black;
-  margin-bottom:.4em;
-  border:none;
+.screenCenter {
+  margin-top:auto;
+  margin-bottom:auto;
 }
 
 .customItem {
