--- a/src/pages/create-match/create-match.scss
+++ b/src/pages/create-match/create-match.scss
@@ -1,3 +1,10 @@
 page-create-match {
 
+  .item-divider {
+    background-color: lightslategrey;
+    color: black;
+    margin-bottom: .4em;
+    border: none;
+  }
+
 }
